# quarry

./: .gitignore  Cargo.toml  README.md  doc-architecture.md  doc-build-order.md  doc-build-plan.md  doc-easy-path-plan.md  doc-evidence.md  doc-human-in-the-loop.md  doc-ingestion-scheduling.md  doc-parsing-design-brief.md  doc-parsing-implementation-plan.md  pyproject.toml  reconstruction-validator-brief.md
catch_eval/: _corpus.qdoc  _dl.json  _grids.json  corpus_dataset.json  corpus_label.html  dataset.json  label.html
evidence/: 01-step0-probe.md  02-layout-speed.md  03-corpus-cost.md  04-docling-stages.md  05-image-pages.md  06-blank-discriminator.md  07-whole-vs-crop-docling.md  08-pipeline-validation.md  09-gate-timing.md  10-ocr-cost.md
experiments/: phase0-catch-rate.md
fixtures/: filing.qdoc  filing.truth.json
input/: README.md
scripts/: README.md  bench_corpus.py  build_catch_eval.py  build_truth.py  compare_tables.py  corpus_tables.py  corpus_yolo.py  docling_crop.py  docling_ocr_corpus.py  docling_ocr_cost.py  docling_parse.py  docling_stages.py  docling_to_json.py  fetch_benchmarks.py  fetch_edgar.py  gen_docling_sample.py  gen_synthetic_pdf.py  layout_detect.py  liteparse_to_qdoc.py  litparse_region.py  ocr.py  ocr_cost.py  pdf_to_qdoc.py  probe.py  recon_validate.py  region_text.py  render_pages.py  run_corpus.py  run_docling.py  speed_tables.py  speed_yolo.py  surya_layout.py  text_tables.py  timing_gate.py  trajectory.py  trajectory_graph.py  trajectory_server.py  triage.py  typed_table.py  validate.py  (+1 more)
src/: adjudicate.rs  analysis.rs  check.rs  (+24 more)
(+15 files in other folders)
