[package]
name = "quarry"
version = "0.1.0"
edition = "2024"

[lib]
name = "quarry"
path = "src/lib.rs"

[[bin]]
name = "quarry"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
